Remove fixed z-index of Toolbar from styles

--- a/src/less/summernote-bs4.less
+++ b/src/less/summernote-bs4.less
@@ -269,7 +269,6 @@
 /* Popover and Toolbar (Button container)
  ------------------------------------------ */
 .note-toolbar {
-  z-index: 500;
   position: relative;
 }
 
